# GRIT

./: .gitignore  BUGTRACKER  LICENSE.md  README.md
GRIT/: CMakeLists.txt
GRIT/APPS/: CMakeLists.txt
GRIT/APPS/area_maximization/: CMakeLists.txt
GRIT/APPS/area_maximization/src/: main.cpp
GRIT/APPS/elasticity_cantilever_beam/: CMakeLists.txt
GRIT/APPS/elasticity_cantilever_beam/include/: simulation.h  write_svg_files.h
GRIT/APPS/elasticity_cantilever_beam/src/: main.cpp
GRIT/APPS/elasticity_compression/: CMakeLists.txt
GRIT/APPS/elasticity_compression/include/: simulation.h  write_profiling.h  write_svg_files.h
GRIT/APPS/elasticity_compression/src/: main.cpp
GRIT/APPS/elasticity_compression_plates/: CMakeLists.txt
GRIT/APPS/elasticity_compression_plates/include/: fixed_step_loop.h  fps_loop.h  simulation.h  write_svg_files.h
GRIT/APPS/elasticity_compression_plates/src/: main.cpp
GRIT/APPS/elasticity_squeezer/: CMakeLists.txt
GRIT/APPS/elasticity_squeezer/include/: fixed_step_loop.h  fps_loop.h  simulation.h  write_svg_files.h
GRIT/APPS/elasticity_squeezer/src/: dummy.cu  main.cpp
GRIT/APPS/elasticity_stretch/: CMakeLists.txt
GRIT/APPS/elasticity_stretch/include/: simulation.h  write_svg_files.h
GRIT/APPS/elasticity_stretch/src/: main.cpp
GRIT/APPS/erosion/: CMakeLists.txt
GRIT/APPS/erosion/src/: main.cpp
GRIT/APPS/liquid/: CMakeLists.txt
GRIT/APPS/liquid/include/: fixed_step_loop.h  fps_loop.h  simulation.h  write_profiling.h  write_svg_files.h
GRIT/APPS/liquid/src/: main.cpp
GRIT/APPS/magnetostatics/: CMakeLists.txt
GRIT/APPS/magnetostatics/include/: fixed_step_loop.h  simulation.h  write_svg_files.h
GRIT/APPS/magnetostatics/src/: main.cpp
GRIT/APPS/stefan/: CMakeLists.txt
GRIT/APPS/stefan/include/: fixed_step_loop.h  simulation.h  sizing_fields.h  sub_range.h  write_svg_files.h
GRIT/APPS/stefan/src/: main.cpp
GRIT/APPS/tutorial_contact/: CMakeLists.txt
GRIT/APPS/tutorial_contact/src/: main.cpp
GRIT/APPS/tutorial_smolarkiewicz/: CMakeLists.txt
GRIT/APPS/tutorial_smolarkiewicz/src/: main.cpp
GRIT/APPS/tutorial_vortex_in_a_box/: CMakeLists.txt
GRIT/APPS/tutorial_vortex_in_a_box/src/: main.cpp
GRIT/APPS/tutorial_zalesak_disk/: CMakeLists.txt
GRIT/APPS/tutorial_zalesak_disk/src/: main.cpp
GRIT/GLUE/: CMakeLists.txt
GRIT/GLUE/include/: glue.h  glue_clear_attribute.h  glue_compute_bounding_box.h  glue_compute_contact_points.h  glue_compute_neighbors.h  glue_contact_point.h  glue_copy_attribute.h  glue_make_adjacency.h  glue_make_phase.h  glue_matlab_write_mesh.h  glue_matrix_assembly.h  glue_neighbors.h  glue_phase.h  glue_resize_domain.h  glue_sub_range.h  glue_svg_draw.h  glue_triplet.h  glue_tuple.h  glue_vector_assembly.h
GRIT/GRIT/: CMakeLists.txt
GRIT/GRIT/include/: grit.h  grit_attribute_manager.h  grit_attribute_vector.h  grit_attributes.h  grit_batch.h  grit_default_algorithm.h  grit_default_types.h  grit_do_operations.h  grit_domain_manager.h  grit_engine_2d.h  grit_interface_algorithm.h  grit_interface_attribute_assignment.h  grit_interface_domain_decomposition.h  grit_interface_mesh.h  grit_interface_mesh_operation.h  grit_interface_monitor.h  grit_interface_quality_measure.h  grit_interface_scheduler.h  grit_logic_expressions.h  grit_opentissue_math_types.h  grit_opentissue_mesh.h  grit_parameters.h  grit_pthread_scheduler.h  grit_quality_analyzer.h  grit_simplex.h  grit_simplex_set.h  grit_simplex_set_functions.h  grit_slab_decomposition.h  grit_subdomain.h
GRIT/GRIT/src/: mom2d.cpp
GRIT/SIMULATORS/: CMakeLists.txt
GRIT/SIMULATORS/AREA/: CMakeLists.txt
GRIT/SIMULATORS/ELASTICITY/: CMakeLists.txt
GRIT/SIMULATORS/EROSION/: CMakeLists.txt
GRIT/SIMULATORS/LIQUID/: CMakeLists.txt
GRIT/SIMULATORS/MAGNETISM/: CMakeLists.txt
GRIT/SIMULATORS/STEFAN/: CMakeLists.txt
GRIT/UTIL/: CMakeLists.txt
GRIT/UTIL/include/: util.h  util_angle.h  util_area_edge_ratio.h  util_barycentric.h  util_barycentric_inside.h  util_boolean.h  util_collapse_time.h  util_config_file.h  util_coo_bicg.h  util_coo_bicgstab.h  util_coo_cr.h  util_coo_gmres.h  util_coo_matrix.h  util_coo_pcg.h  util_coo_preconditioners.h  util_cpp11.h  util_determinant.h  util_distance_fields.h  util_edge_length.h  util_find_index.h  util_generate_filename.h  util_get_data_file_path.h.in  util_il_wrap.h  util_image.h  util_image_read.h  util_image_write.h  util_index_helper.h  util_integer.h  util_is_ccw.h  util_is_finite.h  util_is_number.h  util_log.h  util_matlab_write_matrix.h  util_matlab_write_profiling.h  util_matlab_write_vector.h  util_maxmin_edge_ratio.h  util_profiling.h  util_same_sign.h  util_solve3x3.h  util_solve_equation.h  (+10 more)
GRIT/UTIL/src/: util_solve_equation_cusp.cu  util_string_helper.cpp
GRIT/include/: configuration.h
GRIT/lib/: area.lib  areaD.lib  elasticity.lib  elasticityD.lib  erosion.lib  erosionD.lib  glue.lib  glueD.lib  grit.lib  gritD.lib  liquid.lib  liquidD.lib  stefan.lib  stefanD.lib  util.lib  utilD.lib
GRIT/unit_tests/: CMakeLists.txt
GRIT/unit_tests/glue_compute_neighbors/: CMakeLists.txt  glue_compute_neighbors.cpp
GRIT/unit_tests/glue_make_adjacent/: CMakeLists.txt  glue_make_adjacent.cpp
GRIT/unit_tests/glue_matrix_assembly/: CMakeLists.txt  glue_matrix_assembly.cpp
GRIT/unit_tests/glue_vector_assembly/: CMakeLists.txt  glue_vector_assembly.cpp
GRIT/unit_tests/grit_logic_expressions/: CMakeLists.txt  grit_logic_expressions.cpp
GRIT/unit_tests/grit_test_data/: CMakeLists.txt  grit_test_data.cpp
GRIT/unit_tests/util_angle/: CMakeLists.txt  util_angle.cpp
GRIT/unit_tests/util_barycentric/: CMakeLists.txt  util_barycentric.cpp
GRIT/unit_tests/util_collapse_time/: CMakeLists.txt  util_collapse_time.cpp
GRIT/unit_tests/util_coo_matrix/: CMakeLists.txt  util_coo_matrix.cpp
GRIT/unit_tests/util_coo_solve_equation/: CMakeLists.txt  util_coo_solve_equation.cpp
GRIT/unit_tests/util_find_index/: CMakeLists.txt  util_find_index.cpp
GRIT/wrappers/: CMakeLists.txt
GRIT/wrappers/python/: CMakeLists.txt  pygrit_sub_range.h  pygrit_types.h  python.cpp
(+140 files in other folders)
