CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

#IF(COMMAND cmake_policy)
#  CMAKE_POLICY(SET CMP0003 NEW)
#ENDIF(COMMAND cmake_policy)

PROJECT(GRIT)

IF(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
  MESSAGE(
    FATAL_ERROR 
    "CMake generation for GRIT is not allowed within the source directory!"
    )
ENDIF()

SET(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "" FORCE)

IF (MSVC)
  ADD_DEFINITIONS(-D_SCL_SECURE_NO_WARNINGS)
  ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ELSE (MSVC)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fpermissive")
ENDIF(MSVC)

SET(ENABLE_UNIT_TESTS   0 CACHE STRING "Set to 1 if unit tests should be added to project files and 0 otherwise")
SET(ENABLE_CUDA         0 CACHE STRING "Set to 1 if CUDA should be used in the project and 0 otherwise")


SET(TRUNK_DIR ${PROJECT_SOURCE_DIR}/..)
FIND_PACKAGE(3RDPARTY     PATHS "${TRUNK_DIR}/3RDPARTY"       REQUIRED)

SET(Boost_USE_STATIC_LIBS ON)
IF (MSVC)
  SET( BOOST_LIBRARYDIR "${Boost_INCLUDE_DIR}/lib")
ENDIF(MSVC)
FIND_PACKAGE( Boost COMPONENTS unit_test_framework system filesystem REQUIRED)

FIND_PACKAGE( Threads )

IF(ENABLE_CUDA)
  FIND_PACKAGE(CUDA)
  IF(CUDA_FOUND)
    ADD_DEFINITIONS(-DCUDA_FOUND)
  ENDIF()
ENDIF()

ENABLE_TESTING()

ADD_SUBDIRECTORY(GRIT)
ADD_SUBDIRECTORY(APPS)
ADD_SUBDIRECTORY(UTIL)
ADD_SUBDIRECTORY(GLUE)
ADD_SUBDIRECTORY(SIMULATORS)

IF(ENABLE_UNIT_TESTS)
  ADD_SUBDIRECTORY(unit_tests)
ENDIF()

