ADD_SUBDIRECTORY(area_maximization)
ADD_SUBDIRECTORY(tutorial_zalesak_disk)
ADD_SUBDIRECTORY(tutorial_vortex_in_a_box)
ADD_SUBDIRECTORY(tutorial_smolarkiewicz)
ADD_SUBDIRECTORY(tutorial_contact)
ADD_SUBDIRECTORY(elasticity_squeezer)
ADD_SUBDIRECTORY(elasticity_compression)
ADD_SUBDIRECTORY(elasticity_stretch)
ADD_SUBDIRECTORY(elasticity_cantilever_beam)
ADD_SUBDIRECTORY(elasticity_compression_plates)

