INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/UTIL/include
  ${PROJECT_SOURCE_DIR}/GRIT/include
  include
  )

FILE(GLOB
  GLUE_SOURCES 
  src/*.cpp
  )

FILE(GLOB
  GLUE_HEADERS
  include/*.h
  )

ADD_LIBRARY(
  glue
  ${GLUE_HEADERS}
  ${GLUE_SOURCES}
  )

TARGET_LINK_LIBRARIES(
  glue 
  grit
  util
  ${CMAKE_THREAD_LIBS_INIT}
)

IF(CMAKE_GENERATOR MATCHES Xcode)		
  SET_TARGET_PROPERTIES(glue PROPERTIES XCODE_ATTRIBUTE_WARNING_CFLAGS "-Wall")
ENDIF(CMAKE_GENERATOR MATCHES Xcode)

SET_TARGET_PROPERTIES(glue PROPERTIES DEBUG_POSTFIX "D" )
SET_TARGET_PROPERTIES(glue PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(glue PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(glue PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(glue PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(glue PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")
