CONFIGURE_FILE(
  "${PROJECT_SOURCE_DIR}/UTIL/include/util_get_data_file_path.h.in"
  "${PROJECT_SOURCE_DIR}/UTIL/include/util_get_data_file_path.h"
  @ONLY
)

IF(ENABLE_CUDA)
  FIND_PACKAGE(CUDA)
ENDIF()

FIND_PACKAGE(DevIL)
IF(IL_FOUND)
  ADD_DEFINITIONS(-D__DEVILLIB__)
  SET(DEVIL_INCLUDE_DIR ${IL_INCLUDE_DIR})
  SET(DEVIL_LIBRARIES
    ${ILUT_LIBRARIES}
    ${IL_LIBRARIES}
    ${ILU_LIBRARIES}
    )
ELSE()
  MESSAGE("No worries if DevIL is not found, the code for making framegrab will be ignored.")
  SET(DEVIL_INCLUDE_DIR "")
  SET(DEVIL_LIBRARIES   "")
ENDIF()


IF(ENABLE_CUDA AND CUDA_FOUND)

  ADD_DEFINITIONS(-DCUDA_FOUND)

  INCLUDE_DIRECTORIES(
    ${CUSP_INCLUDE_DIRS}
    ${PROJECT_SOURCE_DIR}/UTIL/include
    ${DEVIL_INCLUDE_DIR}
  )

  FILE(GLOB
    UTIL_SOURCES
    ${PROJECT_SOURCE_DIR}/UTIL/src/*.cpp
    ${PROJECT_SOURCE_DIR}/UTIL/src/*.cu
  )

  FILE(GLOB
    UTIL_HEADERS
    ${PROJECT_SOURCE_DIR}/UTIL/include/*.h
  )

  CUDA_ADD_LIBRARY(
    util
    ${UTIL_SOURCES}
    ${UTIL_HEADERS}
  )

ELSE()

  FILE(GLOB
    UTIL_SOURCES
    ${PROJECT_SOURCE_DIR}/UTIL/src/*.cpp
  )

  INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/UTIL/include
    ${DEVIL_INCLUDE_DIR}
  )

  FILE(GLOB
    UTIL_HEADERS
    ${PROJECT_SOURCE_DIR}/UTIL/include/*.h
  )

  ADD_LIBRARY(
    util
    ${UTIL_SOURCES}
    ${UTIL_HEADERS}
  )

ENDIF()


TARGET_LINK_LIBRARIES(
  util
  ${DEVIL_LIBRARIES}
  )

IF(CMAKE_GENERATOR MATCHES Xcode)		
  IF(ENABLE_CUDA)
    SET_TARGET_PROPERTIES(util PROPERTIES XCODE_ATTRIBUTE_LD_RUNPATH_SEARCH_PATHS "/usr/local/cuda/lib")
  ENDIF()
  SET_TARGET_PROPERTIES(util PROPERTIES XCODE_ATTRIBUTE_FRAMEWORK_SEARCH_PATHS "/Library/Frameworks")
  SET_TARGET_PROPERTIES(util PROPERTIES XCODE_ATTRIBUTE_WARNING_CFLAGS "-Wall")
ENDIF()

SET_TARGET_PROPERTIES(util PROPERTIES DEBUG_POSTFIX "D" )

SET_TARGET_PROPERTIES(util PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(util PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(util PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(util PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(util PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")
