ADD_SUBDIRECTORY( glue_compute_neighbors  )
ADD_SUBDIRECTORY( glue_matrix_assembly    )
ADD_SUBDIRECTORY( glue_vector_assembly    )
ADD_SUBDIRECTORY( glue_make_adjacent      )
ADD_SUBDIRECTORY( grit_logic_expressions  )
ADD_SUBDIRECTORY( grit_test_data          )
ADD_SUBDIRECTORY( util_coo_matrix         )
ADD_SUBDIRECTORY( util_coo_solve_equation )
ADD_SUBDIRECTORY( util_barycentric        )
ADD_SUBDIRECTORY( util_find_index         )
ADD_SUBDIRECTORY( util_angle              )




