INCLUDE_DIRECTORIES(
  ${Boost_INCLUDE_DIRS}
  ${OpenTissue_INCLUDE_DIRS}
  ${PROJECT_SOURCE_DIR}/include
  ${PROJECT_SOURCE_DIR}/GRIT/include
  ${PROJECT_SOURCE_DIR}/GLUE/include
  ${PROJECT_SOURCE_DIR}/UTIL/include
  ${PROJECT_SOURCE_DIR}/SIMULATORS/AREA/include
  include
  )

FILE(GLOB
  AREA_MAXIMIZATION_SOURCES 
  src/*.cpp
  )

FILE(GLOB
  AREA_HEADERS
  include/*.h
  )

FILE(GLOB
  AREA_MAXIMIZATION_CFGS
  ${PROJECT_SOURCE_DIR}/bin/area_maximization.cfg
  ${PROJECT_SOURCE_DIR}/bin/remeshing_params/*.cfg
  )

ADD_EXECUTABLE(
  demo_area_maximization
  ${AREA_MAXIMIZATION_SOURCES} 
  ${AREA_MAXIMIZATION_HEADERS}
  ${AREA_MAXIMIZATION_CFGS}
  )

TARGET_LINK_LIBRARIES(
  demo_area_maximization
  glue
  util
  grit
  area
  ${CMAKE_THREAD_LIBS_INIT}
  )

SOURCE_GROUP("Config Files"    FILES ${AREA_MAXIMIZATION_CFGS})

SET_TARGET_PROPERTIES(demo_area_maximization PROPERTIES DEBUG_POSTFIX "D" )
SET_TARGET_PROPERTIES(demo_area_maximization PROPERTIES RUNTIME_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_area_maximization PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_area_maximization PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_area_maximization PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_area_maximization PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/bin/")
