INCLUDE_DIRECTORIES(
  ${Boost_INCLUDE_DIRS}
  ${OpenTissue_INCLUDE_DIRS}
  ${CUSP_INCLUDE_DIRS}
  ${PROJECT_SOURCE_DIR}/GRIT/include
  ${PROJECT_SOURCE_DIR}/GLUE/include
  ${PROJECT_SOURCE_DIR}/SIMULATORS/ELASTICITY/include
  ${PROJECT_SOURCE_DIR}/UTIL/include
  include
  )

FILE(GLOB
  ELASTICITY_COMPRESSION_PLATES_SOURCES 
  src/*.cpp
  )

FILE(GLOB
  ELASTICITY_COMPRESSION_PLATES_HEADERS
  include/*.h
  )

FILE(GLOB
  ELASTICITY_COMPRESSION_PLATES_CFGS
  ${PROJECT_SOURCE_DIR}/bin/elasticity_compression_plates.cfg
  ${PROJECT_SOURCE_DIR}/bin/remeshing_params/*.cfg
  )

ADD_EXECUTABLE(
  demo_elasticity_compression_plates
  ${ELASTICITY_COMPRESSION_PLATES_SOURCES}
  ${ELASTICITY_COMPRESSION_PLATES_HEADERS}
  ${ELASTICITY_COMPRESSION_PLATES_CFGS}
  )

TARGET_LINK_LIBRARIES(
  demo_elasticity_compression_plates
  grit
  glue
  elasticity
  util
  ${CMAKE_THREAD_LIBS_INIT}
  )

SOURCE_GROUP("Config Files"    FILES ${ELASTICITY_COMPRESSION_PLATES_CFGS})

IF(CMAKE_GENERATOR MATCHES Xcode)		
  SET_TARGET_PROPERTIES(demo_elasticity_compression_plates PROPERTIES XCODE_ATTRIBUTE_FRAMEWORK_SEARCH_PATHS "/Library/Frameworks")
  SET_TARGET_PROPERTIES(demo_elasticity_compression_plates PROPERTIES XCODE_ATTRIBUTE_WARNING_CFLAGS "-Wall")
ENDIF(CMAKE_GENERATOR MATCHES Xcode)

SET_TARGET_PROPERTIES(demo_elasticity_compression_plates PROPERTIES DEBUG_POSTFIX "D" )
SET_TARGET_PROPERTIES(demo_elasticity_compression_plates PROPERTIES RUNTIME_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_elasticity_compression_plates PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_elasticity_compression_plates PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_elasticity_compression_plates PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_elasticity_compression_plates PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/bin/")
