INCLUDE_DIRECTORIES(
  ${Boost_INCLUDE_DIRS}
  ${OpenTissue_INCLUDE_DIRS}
  ${CUSP_INCLUDE_DIRS}
  ${PROJECT_SOURCE_DIR}/GRIT/include
  ${PROJECT_SOURCE_DIR}/GLUE/include
  ${PROJECT_SOURCE_DIR}/SIMULATORS/ELASTICITY/include
  ${PROJECT_SOURCE_DIR}/UTIL/include
  include
  )

FILE(GLOB
  ELASTICITY_SQUEEZER_SOURCES 
  src/*.cpp
  )

FILE(GLOB
  ELASTICITY_SQUEEZER_HEADERS
  include/*.h
  )

FILE(GLOB
  ELASTICITY_SQUEEZER_CFGS
  ${PROJECT_SOURCE_DIR}/bin/elasticity_squeezer.cfg
  ${PROJECT_SOURCE_DIR}/bin/remeshing_params/*.cfg
  )

ADD_EXECUTABLE(
  demo_elasticity_squeezer
  ${ELASTICITY_SQUEEZER_SOURCES}
  ${ELASTICITY_SQUEEZER_HEADERS}
  ${ELASTICITY_SQUEEZER_CFGS}
  )

TARGET_LINK_LIBRARIES(
  demo_elasticity_squeezer
  grit
  glue
  elasticity
  util
  ${CMAKE_THREAD_LIBS_INIT}
  )

SOURCE_GROUP("Config Files"    FILES ${ELASTICITY_SQUEEZER_CFGS})

IF(CMAKE_GENERATOR MATCHES Xcode)		
  SET_TARGET_PROPERTIES(demo_elasticity_squeezer PROPERTIES XCODE_ATTRIBUTE_FRAMEWORK_SEARCH_PATHS "/Library/Frameworks")
  SET_TARGET_PROPERTIES(demo_elasticity_squeezer PROPERTIES XCODE_ATTRIBUTE_WARNING_CFLAGS "-Wall")
ENDIF(CMAKE_GENERATOR MATCHES Xcode)

SET_TARGET_PROPERTIES(demo_elasticity_squeezer PROPERTIES DEBUG_POSTFIX "D" )
SET_TARGET_PROPERTIES(demo_elasticity_squeezer PROPERTIES RUNTIME_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_elasticity_squeezer PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_elasticity_squeezer PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_elasticity_squeezer PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_elasticity_squeezer PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/bin/")
