INCLUDE_DIRECTORIES(
  ${Boost_INCLUDE_DIRS}
  ${OpenTissue_INCLUDE_DIRS}
  ${PROJECT_SOURCE_DIR}/include
  ${PROJECT_SOURCE_DIR}/GRIT/include
  ${PROJECT_SOURCE_DIR}/GLUE/include
  ${PROJECT_SOURCE_DIR}/UTIL/include
  ${PROJECT_SOURCE_DIR}/SIMULATORS/EROSION/include
  include
  )

FILE(GLOB
  EROSION_SOURCES
  src/*.cpp
  )

FILE(GLOB
  EROSION_HEADERS
  include/*.h
  )

FILE(GLOB
  EROSION_CFGS
  ${PROJECT_SOURCE_DIR}/bin/erosion.cfg
  ${PROJECT_SOURCE_DIR}/bin/remeshing_params/*.cfg
  )

ADD_EXECUTABLE(
  demo_erosion
  ${EROSION_SOURCES} 
  ${EROSION_HEADERS}
  ${EROSION_CFGS}
  )

TARGET_LINK_LIBRARIES(
  demo_erosion
  glue
  util
  grit
  erosion 
  ${CMAKE_THREAD_LIBS_INIT}
  )

SOURCE_GROUP("Config Files"    FILES ${EROSION_CFGS})


SET_TARGET_PROPERTIES(demo_erosion PROPERTIES DEBUG_POSTFIX "D" )
SET_TARGET_PROPERTIES(demo_erosion PROPERTIES RUNTIME_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_erosion PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_erosion PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_erosion PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_erosion PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/bin/")
