INCLUDE_DIRECTORIES(
  ${Boost_INCLUDE_DIRS}
  ${OpenTissue_INCLUDE_DIRS}
  ${PROJECT_SOURCE_DIR}/UTIL/include
  ${PROJECT_SOURCE_DIR}/GRIT/include
  ${PROJECT_SOURCE_DIR}/GLUE/include
  ${PROJECT_SOURCE_DIR}/SIMULATORS/LIQUID/include
  ${PROJECT_SOURCE_DIR}/SIMULATORS/LIQUID/include
  include
  )

FILE(GLOB
  LIQUID_SOURCES 
  src/*.cpp
  )

FILE(GLOB
  LIQUID_HEADERS
  include/*.h
  )

FILE(GLOB
  LIQUID_CFGS
  ${PROJECT_SOURCE_DIR}/bin/liquid.cfg
  ${PROJECT_SOURCE_DIR}/bin/remeshing_params/*.cfg
  )

ADD_EXECUTABLE(
  demo_liquid
  ${LIQUID_SOURCES}
  ${LIQUID_HEADERS}
  ${LIQUID_CFGS}
  )

TARGET_LINK_LIBRARIES(
  demo_liquid
  grit
  glue
  util
  liquid
  ${CMAKE_THREAD_LIBS_INIT}
  )

SOURCE_GROUP("Config Files"    FILES ${LIQUID_CFGS})

IF(CMAKE_GENERATOR MATCHES Xcode)		
  SET_TARGET_PROPERTIES(demo_liquid PROPERTIES XCODE_ATTRIBUTE_FRAMEWORK_SEARCH_PATHS "/Library/Frameworks")
  SET_TARGET_PROPERTIES(demo_liquid PROPERTIES XCODE_ATTRIBUTE_WARNING_CFLAGS "-Wall")
ENDIF(CMAKE_GENERATOR MATCHES Xcode)

SET_TARGET_PROPERTIES(demo_liquid PROPERTIES DEBUG_POSTFIX "D" )
SET_TARGET_PROPERTIES(demo_liquid PROPERTIES RUNTIME_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_liquid PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_liquid PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_liquid PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_liquid PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/bin/")

