INCLUDE_DIRECTORIES(
  ${Boost_INCLUDE_DIRS}
  ${OpenTissue_INCLUDE_DIRS}
  ${PROJECT_SOURCE_DIR}/include
  ${PROJECT_SOURCE_DIR}/UTIL/include
  ${PROJECT_SOURCE_DIR}/GRIT/include
  ${PROJECT_SOURCE_DIR}/GLUE/include
  ${PROJECT_SOURCE_DIR}/SIMULATORS/MAGNETISM/include
  include
  )

FILE(GLOB
  DEMO_MAGNETOSTATICS_SOURCES
  src/*.cpp
  )

FILE(GLOB
  DEMO_MAGNETOSTATICS_HEADERS
  include/*.h
  )

FILE(GLOB
  DEMO_MAGNETOSTATICS_CFGS
  ${PROJECT_SOURCE_DIR}/bin/magnetostatics.cfg
  ${PROJECT_SOURCE_DIR}/bin/remeshing_params/*.cfg
  )

ADD_EXECUTABLE(
  demo_magnetostatics
  ${DEMO_MAGNETOSTATICS_SOURCES}
  ${DEMO_MAGNETOSTATICS_HEADERS}
  ${DEMO_MAGNETOSTATICS_CFGS}
  )

TARGET_LINK_LIBRARIES(
  demo_magnetostatics
  grit
  glue
  util
  magnetism
  ${CMAKE_THREAD_LIBS_INIT}
  )

SOURCE_GROUP("Config Files"    FILES ${DEMO_MAGNETOSTATICS_CFGS})


IF(CMAKE_GENERATOR MATCHES Xcode)		
  IF(ENABLE_CUDA)
    SET_TARGET_PROPERTIES(demo_magnetostatics PROPERTIES XCODE_ATTRIBUTE_LD_RUNPATH_SEARCH_PATHS "/usr/local/cuda/lib")
  ENDIF()  
  SET_TARGET_PROPERTIES(demo_magnetostatics PROPERTIES XCODE_ATTRIBUTE_FRAMEWORK_SEARCH_PATHS "/Library/Frameworks")
  SET_TARGET_PROPERTIES(demo_magnetostatics PROPERTIES XCODE_ATTRIBUTE_WARNING_CFLAGS "-Wall")
ENDIF()

SET_TARGET_PROPERTIES(demo_magnetostatics PROPERTIES DEBUG_POSTFIX "D" )
SET_TARGET_PROPERTIES(demo_magnetostatics PROPERTIES RUNTIME_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_magnetostatics PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_magnetostatics PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_magnetostatics PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_magnetostatics PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/bin/")
