INCLUDE_DIRECTORIES(
  ${Boost_INCLUDE_DIRS}
  ${OpenTissue_INCLUDE_DIRS}
  ${PROJECT_SOURCE_DIR}/include
  ${PROJECT_SOURCE_DIR}/GRIT/include
  ${PROJECT_SOURCE_DIR}/GLUE/include
  ${PROJECT_SOURCE_DIR}/UTIL/include
  include
  )

FILE(GLOB
  TUTORIAL_ZALESAK_DISK_SOURCES 
  src/*.cpp
  )

FILE(GLOB
  TUTORIAL_ZALESAK_DISK_HEADERS
  include/*.h
  )

FILE(GLOB
  TUTORIAL_ZALESAK_DISK_CFGS
  ${PROJECT_SOURCE_DIR}/bin/tutorial_zalesak_disk.cfg
  ${PROJECT_SOURCE_DIR}/bin/remeshing_params/*.cfg
  )

ADD_EXECUTABLE(
  demo_tutorial_zalesak_disk
  ${TUTORIAL_ZALESAK_DISK_SOURCES} 
  ${TUTORIAL_ZALESAK_DISK_HEADERS}
  ${TUTORIAL_ZALESAK_DISK_CFGS}
  )

TARGET_LINK_LIBRARIES(
  demo_tutorial_zalesak_disk
  glue
  util
  grit
  ${CMAKE_THREAD_LIBS_INIT}
  )

SOURCE_GROUP("Config Files"    FILES ${TUTORIAL_ZALESAK_DISK_CFGS})


SET_TARGET_PROPERTIES(demo_tutorial_zalesak_disk PROPERTIES DEBUG_POSTFIX "D" )
SET_TARGET_PROPERTIES(demo_tutorial_zalesak_disk PROPERTIES RUNTIME_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_tutorial_zalesak_disk PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_tutorial_zalesak_disk PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_tutorial_zalesak_disk PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/bin/")
SET_TARGET_PROPERTIES(demo_tutorial_zalesak_disk PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/bin/")
