INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/UTIL/include
  ${PROJECT_SOURCE_DIR}/GRIT/include
  ${PROJECT_SOURCE_DIR}/GLUE/include
  include
  )

FILE(GLOB
  LIQUID_SOURCES 
  src/*.cpp
  )

FILE(GLOB
  LIQUID_HEADERS
  include/*.h
  )

ADD_LIBRARY(
  liquid
  ${LIQUID_SOURCES}
  ${LIQUID_HEADERS}
  )

TARGET_LINK_LIBRARIES(
  liquid
  grit
  glue
  util
  ${CMAKE_THREAD_LIBS_INIT}
  )

IF(CMAKE_GENERATOR MATCHES Xcode)
  IF(ENABLE_CUDA)
    SET_TARGET_PROPERTIES(liquid PROPERTIES XCODE_ATTRIBUTE_LD_RUNPATH_SEARCH_PATHS "/usr/local/cuda/lib")
  ENDIF()
  SET_TARGET_PROPERTIES(liquid PROPERTIES XCODE_ATTRIBUTE_FRAMEWORK_SEARCH_PATHS "/Library/Frameworks")	
  SET_TARGET_PROPERTIES(liquid PROPERTIES XCODE_ATTRIBUTE_WARNING_CFLAGS "-Wall")
ENDIF(CMAKE_GENERATOR MATCHES Xcode)

SET_TARGET_PROPERTIES(liquid PROPERTIES DEBUG_POSTFIX "D" )
SET_TARGET_PROPERTIES(liquid PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(liquid PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(liquid PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(liquid PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(liquid PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")
