INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/UTIL/include
  ${PROJECT_SOURCE_DIR}/GRIT/include
  ${PROJECT_SOURCE_DIR}/GLUE/include
  include
  )

FILE(GLOB
  MAGNETISM_SOURCES 
  src/*.cpp
  )

FILE(GLOB
  MAGNETISM_HEADERS
  include/*.h
  )

ADD_LIBRARY(
  magnetism
  ${MAGNETISM_SOURCES}
  ${MAGNETISM_HEADERS}
  )

TARGET_LINK_LIBRARIES(
  magnetism
  grit
  glue
  util
  ${CMAKE_THREAD_LIBS_INIT}
  )

IF(CMAKE_GENERATOR MATCHES Xcode)		
  IF(ENABLE_CUDA)
    SET_TARGET_PROPERTIES(magnetism PROPERTIES XCODE_ATTRIBUTE_LD_RUNPATH_SEARCH_PATHS "/usr/local/cuda/lib")
  ENDIF()
  SET_TARGET_PROPERTIES(magnetism PROPERTIES XCODE_ATTRIBUTE_FRAMEWORK_SEARCH_PATHS "/Library/Frameworks")
  SET_TARGET_PROPERTIES(magnetism PROPERTIES XCODE_ATTRIBUTE_WARNING_CFLAGS "-Wall")
ENDIF()

SET_TARGET_PROPERTIES(magnetism PROPERTIES DEBUG_POSTFIX "D" )
SET_TARGET_PROPERTIES(magnetism PROPERTIES RUNTIME_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(magnetism PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(magnetism PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(magnetism PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(magnetism PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")

